[gd_scene load_steps=24 format=2]

[ext_resource path="res://Resources/SFX/lowFrequency_explosion_000.ogg" type="AudioStream" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=3]
[ext_resource path="res://Scenes/healthbar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/PlayerHUD.gd" type="Script" id=5]
[ext_resource path="res://Resources/new_theme.tres" type="Theme" id=6]
[ext_resource path="res://Resources/Images/gameicons/PNG/White/1x/forward.png" type="Texture" id=7]
[ext_resource path="res://Resources/fonts/Kenney Blocks.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Resources/Images/gameicons/PNG/White/1x/exitLeft.png" type="Texture" id=9]
[ext_resource path="res://Resources/Images/gameicons/PNG/White/1x/return.png" type="Texture" id=10]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=11]

[sub_resource type="GDScript" id=1]
script/source = "extends Camera2D


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"
var animation_name

# Called when the node enters the scene tree for the first time.
func _ready():
	animation_name = \"camera zoomin\"
	print(global_position)
func _physics_process(delta):
	$AnimationPlayer.play(animation_name)




func _on_AnimationPlayer_animation_finished(anim_name):
	if anim_name == \"camera zoomin\":
		animation_name = \"camera in\"
	if anim_name == \"camera zoomout\":
		animation_name = \"camera out\"
"

[sub_resource type="Animation" id=2]
resource_name = "camera in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "camera out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "camera zoomin"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.6, 0.6 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "camera zoomout"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CanvasItemMaterial" id=6]
light_mode = 1

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=8]
size = 64
font_data = ExtResource( 8 )

[sub_resource type="Curve2D" id=9]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1083, -61, 0, 0, 0, 0, 1083, 706, 0, 0, 0, 0, -67, 706, 0, 0, 0, 0, -67, -60, 0, 0, 0, 0, 1083, -61 )
}

[sub_resource type="CanvasItemMaterial" id=10]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=11]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=12]
light_mode = 1

[node name="Game" type="Node"]
script = ExtResource( 3 )

[node name="AsteroidContainer" type="Node" parent="."]

[node name="BulletContainer" type="Node" parent="."]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 512, 320 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Node2D")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 512, 320 )
scale = Vector2( 0.5, 0.5 )

[node name="Camera2D" type="Camera2D" parent="Node2D"]
process_mode = 0
limit_left = 0
limit_top = 0
limit_right = 1024
limit_bottom = 640
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 2.0
editor_draw_limits = true
editor_draw_drag_margin = true
script = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D/Camera2D"]
playback_process_mode = 0
method_call_mode = 1
"anims/camera in" = SubResource( 2 )
"anims/camera out" = SubResource( 3 )
"anims/camera zoomin" = SubResource( 4 )
"anims/camera zoomout" = SubResource( 5 )

[node name="PlayerHUD" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="PlayerHUD" type="Node2D" parent="PlayerHUD"]

[node name="healthLabel" type="Label" parent="PlayerHUD/PlayerHUD"]
modulate = Color( 10, 10, 10, 1 )
material = SubResource( 6 )
anchor_right = 1.0
margin_left = 47.0
margin_right = 191.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 170, 32 )
custom_fonts/font = SubResource( 7 )
text = "Health"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="healthbar" parent="PlayerHUD/PlayerHUD" instance=ExtResource( 4 )]
position = Vector2( 116, 71 )

[node name="ScoreLabel" type="Label" parent="PlayerHUD/PlayerHUD"]
modulate = Color( 10, 10, 10, 1 )
material = SubResource( 6 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 392.0
margin_right = 632.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 120, 48 )
custom_fonts/font = SubResource( 8 )
text = "10000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemyCount" type="Label" parent="PlayerHUD/PlayerHUD"]
modulate = Color( 10, 10, 10, 1 )
material = SubResource( 6 )
anchor_right = 1.0
margin_left = 808.0
margin_right = 1000.0
margin_bottom = 99.0
rect_pivot_offset = Vector2( 170, 32 )
custom_fonts/font = SubResource( 7 )
text = "Enemies:
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restartMenuDelay" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Path2D" type="Path2D" parent="."]
visible = false
position = Vector2( 4, -3 )
curve = SubResource( 9 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 1083, -61 )
rotation = 1.5708
rotate = false

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" type="Node2D" parent="CanvasLayer"]
pause_mode = 2
script = ExtResource( 11 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PauseMenu"]
margin_right = 1024.0
margin_bottom = 640.0
color = Color( 0, 0, 0, 0.490196 )

[node name="Control" type="Control" parent="CanvasLayer/PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/PauseMenu/Control"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 342.0
margin_right = 642.0
margin_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="CanvasLayer/PauseMenu/Control/VBoxContainer2"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
material = SubResource( 10 )
margin_top = 163.0
margin_right = 300.0
margin_bottom = 241.0
theme = ExtResource( 6 )
text = "Continue"
icon = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="CanvasLayer/PauseMenu/Control/VBoxContainer2"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
material = SubResource( 11 )
margin_top = 261.0
margin_right = 300.0
margin_bottom = 339.0
theme = ExtResource( 6 )
text = "Restart"
icon = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitGame" type="Button" parent="CanvasLayer/PauseMenu/Control/VBoxContainer2"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
material = SubResource( 12 )
margin_top = 359.0
margin_right = 300.0
margin_bottom = 437.0
theme = ExtResource( 6 )
text = "End Game"
icon = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="asteroid_explode" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="PlayerExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
volume_db = 5.0
pitch_scale = 1.2

[connection signal="animation_finished" from="Node2D/Camera2D/AnimationPlayer" to="Node2D/Camera2D" method="_on_AnimationPlayer_animation_finished"]
